# mcd_trabajo_final

./: .RData  .Rhistory  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
notebooks/: eda_gbif_trametes_sanguinea.ipynb  eda_gbif_trametes_sanguinea_raw.ipynb  eda_inat_ps_raw.ipynb  eda_worldclim copy.ipynb  model copy.ipynb  model.ipynb  pipe.ipynb  pipe_etl.ipynb  species_counts.ipynb
notebooks/extras/: data_eda.ipynb  dataset.ipynb  dataset_2.ipynb
python/: main.py
python/notebooks/: eda_gbif_trametes_sanguinea.ipynb  eda_gbif_trametes_sanguinea_raw.ipynb  eda_worldclim copy.ipynb  pipe_etl.ipynb  species_counts.ipynb
python/src/: config.py
r/: bgpoints.Rmd  envvars.Rmd
r/checks/: check_anthropic_layers.R  check_background_strategies.R  check_config_table_sc.R  check_ensemble_models.R  check_env_layers.R  check_idempotency.R  check_issue15_smoke.R  check_lime_predict_model.R  check_predict_fn.R  check_predict_selection.R  check_preprocessing.R  check_preprocessing_filters.R  check_residual_autocorrelation.R  check_soil_layers.R  check_topography_layers.R  check_tune_models.R  check_weighted_background.R  plot_bg_strategies_map.R
r/notebooks/: dataset_generation.Rmd  maxEnt.Rmd  points_visualization.Rmd  stage0_datos.Rmd  stage1_maxent.Rmd  stage2_thinning.Rmd  stage3_distribution_map.Rmd  stage4_xai.Rmd  stage5_residual_diagnostics.Rmd
r/src/: bias_correction.R  build_final_manifest.R  build_parallel_sdm_datasets.R  dataset_pipeline.R  download_gbif.R  ensemble_models.R  ensemble_pipeline.R  env_layers.R  plot.R  (+26 more)
src/: config.py  extra.py
(+11 files in other folders)
