[project]
name = "mcd-trabajo-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h3>=4.3.1",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "rasterio>=1.3.11",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
]
